fix: color contrast for link

--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,5 @@
 	text-align: center;
 }
 .attribution a {
-	color: hsl(228, 45%, 44%);
+	color: #001b47;
 }
